Addes video.html

--- a/video.html
+++ b/video.html
@@ -20,18 +20,8 @@
     <div class="loader" id="loader">
       <img src="source/images/loader.gif" alt="Loading..." />
     </div>
-    <div class="container">
-      <div id="bubble" class="bubble"></div>
-      <div id="cat" class="cat"></div>
-      <div class="buttons">
-      <a id="reload" class="secondary" >AGAIN!</a>
-      <a target="_blank" href="./video.html" id="video" class="primary">HEAR IT</a>
-    </div>
-      <footer>
-        link to my github / insta / linkedin
-      </footer>
-    </div>
-
+    <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/GC5E8ie2pdM?controls=0&amp;start=62" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </iframe>
     <script src="./source/index.js"></script>
   </body>
 </html>
