--- a/video.html
+++ b/video.html
@@ -20,7 +20,8 @@
     <div class="loader" id="loader">
       <img src="source/images/loader.gif" alt="Loading..." />
     </div>
-    <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/GC5E8ie2pdM?controls=0&amp;start=62&autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/GC5E8ie2pdM?controls=0&start=62&autoplay=1" title="YouTube video player" frameborder="0" 
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </iframe>
     <script src="./source/index.js"></script>
   </body>
