Styled video and buttons

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div id="cat" class="cat"></div>
       <div class="buttons">
       <a id="reload" class="secondary" >AGAIN!</a>
-      <a target="_blank" href="./video.html" id="video" class="primary">HEAR IT</a>
+      <a href="./video.html" id="video" class="primary">HEAR IT</a>
     </div>
       <footer>
         link to my github / insta / linkedin
