--- a/video.html
+++ b/video.html
@@ -17,12 +17,14 @@
     <title>Cat-ShoutOut</title>
   </head>
   <body>
-    <div class="loader" id="loader">
-      <img src="source/images/loader.gif" alt="Loading..." />
+    <div class="container">
+        <div class="frame">
+        <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/GC5E8ie2pdM?controls=0&start=62&autoplay=1" title="YouTube video player" frameborder="0" 
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </iframe>
+        </div>
+        <a href="./index.html" class="secondary" >«GO BACK</a>
     </div>
-    <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/GC5E8ie2pdM?controls=0&start=62&autoplay=1" title="YouTube video player" frameborder="0" 
-    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </iframe>
     <script src="./source/index.js"></script>
   </body>
 </html>
