Added background and more styling

--- a/video.html
+++ b/video.html
@@ -17,13 +17,15 @@
     <title>Cat-ShoutOut</title>
   </head>
   <body>
-    <div class="container">
-        <div class="frame">
-        <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/GC5E8ie2pdM?controls=0&start=62&autoplay=1" title="YouTube video player" frameborder="0" 
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </iframe>
+    <div class="container video-container">
+        <div class="frame-container">
+            <div class="frame">
+                <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/GC5E8ie2pdM?controls=0&start=62&autoplay=1" title="YouTube video player" frameborder="0" 
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </iframe>
+            </div>
         </div>
-        <a href="./index.html" class="secondary" >«GO BACK</a>
+        <a href="./index.html" class="secondary back-btn">«GO BACK</a>
     </div>
     <script src="./source/index.js"></script>
   </body>
