--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@400;700&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/16912dd421.js" crossorigin="anonymous"></script>
     <title>Cat-ShoutOut</title>
   </head>
   <body>
@@ -22,16 +23,17 @@
     </div>
     <div class="container">
       <div id="bubble" class="bubble"></div>
-      <div id="cat" class="cat"></div>
+      <div id="cat"></div>
       <div class="buttons">
       <a id="reload" class="secondary" >AGAIN!</a>
       <a href="./video.html" id="video" class="primary">HEAR IT</a>
-    </div>
+      </div>
       <footer>
-        link to my github / insta / linkedin
+        Coded by: <a href="./video.html">Babel</a> 
+        <a target="_blank" href="https://www.instagram.com/babelita"><i class="fab fa-instagram"></i></a>
+        <a target="_blank" href="https://www.linkedin.com/in/bednarskibelen/"><i class="fab fa-linkedin"></i></a>
       </footer>
     </div>
-
     <script src="./source/index.js"></script>
   </body>
 </html>
