Fixed onload image, css hover.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
     <div class="container">
       <div id="bubble" class="bubble"></div>
-      <div id="cat"></div>
+      <div id="cat-container"></div>
       <div class="buttons">
       <a id="reload" class="secondary" >AGAIN!</a>
       <a href="./video.html" id="video" class="primary">HEAR IT</a>
